# jet_simplex_search

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
assets/images/: .$degens_dark.svg.bkp  .$degens_light.svg.bkp  .$how_dark.svg.bkp  .$logo_dark.svg.bkp  .$logo_light.svg.bkp  .$logo_light.svg.dtmp
code_review/: 01_002_synthetic_blow_project_review.md  synthetic_blow_project_review.md
docs/prime_directive/: README.md  artifact_table_to_readable_document_protocol.md  common_failure_mode_002_implementation_without_owner_approval.md  common_failure_mode_003_gameplan_rewrite_during_implementation.md  common_failure_mode_004_false_attribution_and_invented_project_owner_turns.md  git_practices.md  prime_directive.md  (+4 more)
scripts/: release_hygiene.py
smoke/: simplex_table.py  smoke_001.md  smoke_001.py  smoke_002.md  smoke_002.py  smoke_003.md  smoke_003.py  smoke_004.md  smoke_004.py  smoke_005.md  smoke_005.py  smoke_006.md  smoke_006.py  smoke_007.md  smoke_007.py  smoke_008.md  smoke_008.py  smoke_009.md  smoke_009.py  smoke_010.md  smoke_010.py  smoke_011.md  smoke_011.py  smoke_012.md  smoke_012.py  smoke_013.md  smoke_013.py  smoke_014.md  smoke_014.py  smoke_015.md  smoke_015.py  smoke_016.md  smoke_016.py
tests/: fakes.py  test_api.py  test_artifacts.py  test_bottom_tier_enumeration.py  test_clean_tower.py  test_diagnostics.py  test_directed_flag_semantics.py  test_errors.py  test_fiber_lift.py  test_frontier.py  test_graph.py  test_h_lift.py  test_ids.py  test_normalize.py  test_package.py  test_readme_quickstart.py  test_records.py  test_release_hygiene.py  test_release_metadata.py  test_skeleton.py  test_smoke_docs.py  test_smoke_scripts.py  test_static_search_fake_tower.py  test_tower_adapter_fake.py  test_witness_consistency.py
(+47 files in other folders)
