[project]
name = "jet-simplex-search"
version = "0.1.0"
description = "Quotient-tower accelerated search for simplices in sparse graphs."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-config", "--strict-markers"]
