[project]
name = "jet-simplex-search"
version = "0.1.0"
description = "Quotient-tower accelerated search for simplices in sparse graphs."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "state-collapser @ git+https://github.com/TYLERSFOSTER/state_collapser.git@v0.7.2",
]

[project.urls]
Homepage = "https://github.com/TYLERSFOSTER/jet_simplex_search"
Repository = "https://github.com/TYLERSFOSTER/jet_simplex_search"
Issues = "https://github.com/TYLERSFOSTER/jet_simplex_search/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-config", "--strict-markers"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
